# symfonia

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .rusty-hook.toml  Cargo.toml  Cargo.toml.old  Dockerfile  LICENSE.md  README.md  SECURITY.md  TODO.md  build.rs  compose-example.env  compose.yaml  config.toml  debug.json  deny.toml  docker-build.sh  docker-compose.yml  example.env  file-renamer.sh  prepare-sqlx-if-needed.sh  readme.md  rustfmt.toml  symfonia.toml
.github/: FUNDING.yml
.sqlx/: query-00eb44be0581509631734824a9d5cbb8488020c74eed1bb8e68777dd12d551f9.json  query-0d7b2cee7e790ce2f620a2def603a347a745d2ea64ded9c7021c21cb56a2ee86.json  query-0eb44f47721d7dce4a920091f5e236b546b1b4d8b5e63397d990cfb5ff0fb816.json  query-8d127613251411c2dae324bc92105869cd4456e849b3527c9bfbe342879d4418.json  query-90499a591252a71ff3ed78f2662c7897e45450634c4f2e1a7a4ece72e53f056c.json  query-93f9974c9aacce5d679f93ae721750630ecb9ba50f209b2818c38251720f397b.json  query-b8fccc1abcb63d1442a3136927d9d0e4ca3b479d01ea7446ac7c120435c52584.json  query-e61261e55b9bcd1ec1213d60c1955afa2a0a375e44d56244c3341fbc338e25b9.json
crates/symfonia/: Cargo.toml
crates/symfonia-api/: Cargo.toml
crates/symfonia-api/src/: main.rs
crates/symfonia-api/src/api/: mod.rs
crates/symfonia-api/src/api/middleware/: authentication.rs  current_user.rs  mod.rs  permission_guard.rs
crates/symfonia-api/src/api/routes/: mod.rs  ping.rs  version.rs
crates/symfonia-api/src/api/routes/auth/: login.rs  mod.rs  rauthy.rs  register.rs
crates/symfonia-api/src/api/routes/channels/: followers.rs  invites.rs  mod.rs  permissions.rs  pins.rs  recipients.rs  typing.rs  webhooks.rs
crates/symfonia-api/src/api/routes/channels/messages/: bulk_delete.rs  mod.rs
crates/symfonia-api/src/api/routes/channels/messages/id/: ack.rs  crosspost.rs  mod.rs  reactions.rs
crates/symfonia-api/src/api/routes/guilds/: mod.rs  templates.rs
crates/symfonia-api/src/api/routes/guilds/id/: audit_log.rs  bans.rs  channels.rs  discovery_requirements.rs  emoji.rs  invites.rs  messages.rs  mod.rs  prune.rs  stickers.rs  vanity_url.rs  voice_states.rs  welcome_screen.rs
crates/symfonia-api/src/api/routes/guilds/id/members/: mod.rs
crates/symfonia-api/src/api/routes/guilds/id/members/id/: mod.rs  nick.rs  roles.rs
crates/symfonia-api/src/api/routes/guilds/id/roles/: member_counts.rs  mod.rs
crates/symfonia-api/src/api/routes/guilds/id/roles/id/: member_ids.rs  members.rs  mod.rs
crates/symfonia-api/src/api/routes/health/: mod.rs
crates/symfonia-api/src/api/routes/invites/: mod.rs
crates/symfonia-api/src/api/routes/policies/: mod.rs  stats.rs
crates/symfonia-api/src/api/routes/policies/instance/: domain.rs  limits.rs  mod.rs
crates/symfonia-api/src/api/routes/users/: mod.rs
crates/symfonia-api/src/api/routes/users/me/: mod.rs  settings.rs
crates/symfonia-gateway/: .gitignore  Cargo.toml
crates/symfonia-gateway/src/: establish_connection.rs  gateway_task.rs  heartbeat.rs  lib.rs  main.rs  ready.rs
crates/symfonia/src/: cli.rs  main.rs
crates/util/: Cargo.toml
crates/util/fixtures/: guilds.sql  notes.sql  private_channels.sql  users.sql
crates/util/migrations/: 00000_utils.sql  00001_users.sql  00002_guilds.sql  00003_channel_data.sql  00004_permissions.sql  00005_channels.sql  00006_message_data.sql  00006_rawr.sql  00007_messages.sql  00008_messages.sql  20231007011602_categories.sql  20231007011857_audit_logs.sql  20250430223341_oidc_spacebar.sql
crates/util/migrations.old/: 20231007011602_categories.sql  20231007011617_client_release.sql  20231007011631_config.sql  20231007011653_connection_config.sql  20231007011705_embed_cache.sql  20231007011719_rate_limits.sql  20231007011737_security_settings.sql  20231007011751_sticker_packs.sql  20231007011756_user_settings.sql  20231007011757_users.sql  20231007011857_audit_logs.sql  20231007011910_backup_codes.sql  20231007011933_channels.sql  20231007011946_connected_accounts.sql  20231007011956_guilds.sql  20231007012027_bans.sql  20231007012049_channels_guild_id_fk.sql  20231007012108_emojis.sql  20231007012121_invites.sql  20231007012133_members.sql  20231007012149_notes.sql  20231007012204_read_states.sql  20231007012219_recipients.sql  20231007012235_relationships.sql  20231007012255_roles.sql  20231007012306_member_roles.sql  20231007012332_security_keys.sql  20231007012343_sessions.sql  20231007012359_stickers.sql  20231007012439_teams.sql  20231007012456_applications.sql  20231007012505_team_members.sql  20231007012517_templates.sql  20231007012542_valid_registration_tokens.sql  20231007012555_voice_states.sql  20231007012609_webhooks.sql  20231007012620_messages.sql  20231007012640_attachments.sql  20231007012656_message_channel_mentions.sql  20231007012735_message_role_mentions.sql  (+6 more)
crates/util/src/: configuration.rs  errors.rs  lib.rs
crates/util/src/database/: mod.rs  seed_config.rs
crates/util/src/entities/: application.rs  attachment.rs  audit_log.rs  channel.rs  config.rs  emoji.rs  guild.rs  guild_template.rs  invite.rs  member.rs  message.rs  mod.rs  note.rs  read_state.rs  recipient.rs  relationship.rs  role.rs  sticker.rs  template.rs  user.rs  user_settings.rs  voice_state.rs  webhook.rs
crates/util/src/events/: dispatchevent.rs  event.rs  mod.rs
crates/util/src/gateway/: dispatchevent.rs  event.rs  mod.rs
crates/util/src/oidc_auth_adapter/: mod.rs
crates/util/src/oidc_auth_adapter/rauthy/: mod.rs
crates/util/src/util/: email.rs  mod.rs  token.rs
docs/: Event Publishing in Symfonia.excalidraw
firedbg/: target.json  version.toml
fixtures/: guilds.sql  notes.sql  private_channels.sql  users.sql
migrations/: 001_message_stickers.sql  001_relationships.sql  001_users.sql  2023-10-07T01:16:17_client_release.sql  2023-10-07T01:16:31_config.sql  (+55 more)
util/: Cargo.toml
util/migrations/: 20231007011933_channels.sql  20231007011946_connected_accounts.sql  20231007012517_templates.sql
util/src/: errors.rs  lib.rs
util/src/database/: mod.rs
util/src/entities/: channel.rs  member.rs  recipient.rs
util/src/gateway/: event.rs
(+274 files in other folders)
