[package]
name = "symfonia"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.6.0"
base64 = "0.22.1"
bigdecimal = "0.4.7"
bitflags = { version = "2.7.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
hostname = "0.4.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
log = "0.4.25"
log4rs = { version = "1.3.0", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "gzip",
] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
openssl = "0.10.68"
poem = "3.1.6"
utoipa = { version = "5.3.1", features = [] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "macos-system-configuration",
    "charset",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
sqlx = { version = "0.8.3", features = [
    "json",
    "chrono",
    "ipnetwork",
    "runtime-tokio-rustls",
    "any",
] }
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["full"] }
sentry = { version = "0.34.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
] }
clap = { version = "4.5.26", features = ["derive"] }
chorus = { features = [
    "backend",
], default-features = false, path = "../chorus" }
serde_path_to_error = "0.1.16"
percent-encoding = "2.3.1"
hex = "0.4.3"
itertools = "0.13.0"
tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-webpki-roots",
    "tokio-rustls",
] }
pubserve = { version = "1.1.0", features = ["async", "send"] }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
sqlx-pg-uint = { version = "0.8.0", features = ["serde"] }
toml = "0.8.19"
argon2 = "0.5.3"

[dev-dependencies]
rusty-hook = "0.11.2"

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"
