[workspace]
resolver = "2"
members = ["symfonia-api", "symfonia-gateway", "util"]

[workspace.dependencies]
chorus = { version = "0.19.0", features = [
    "backend",
], default-features = false, git = "https://github.com/polyphony-chat/chorus", branch = "dev" }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-webpki-roots",
    "url",
] }
sqlx = "0.8.5"
sqlx-pg-uint = { version = "0.9.0", features = ["serde"] }
