[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
chorus = { version = "0.20.0", features = [
    "backend",
], default-features = false, git = "https://github.com/polyphony-chat/chorus", branch = "dev" }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-webpki-roots",
    "url",
] }
sqlx = "0.8.5"
sqlx-pg-uint = { version = "0.10.1", features = ["serde"] }
