[package]
name = "util"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
bigdecimal = "0.4.8"
chorus = { workspace = true }
chrono = "0.4.40"
clap = "4.5.35"
email_address = "0.2.9"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
log4rs = "1.3.0"
num-traits = "0.2.19"
parking_lot = "0.12.3"
poem = { version = "3.1.8", optional = true }
pubserve = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
sqlx = "0.8.3"
sqlx-pg-uint = { version = "0.9.0", features = ["serde"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["net", "rt-multi-thread", "sync"] }
tokio-tungstenite = { workspace = true }
toml = "0.8.20"

[dev-dependencies]
rusty-hook = "0.11.2"

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"

[features]
poem = ["dep:poem"]
