[package]
name = "symfonia-api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bigdecimal = "0.4.8"
bitflags = { version = "2.9.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
hostname = "0.4.1"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = { version = "1.3.0", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "gzip",
] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
openssl = "0.10.72"
poem = "3.1.9"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "http2",
    "macos-system-configuration",
    "charset",
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { workspace = true, features = [
    "json",
    "chrono",
    "ipnetwork",
    "runtime-tokio-rustls",
    "any",
] }
thiserror = "1.0.69"
tokio = { version = "1.44.2", features = ["full"] }
sentry = { version = "0.34.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
] }
chorus = { workspace = true }
util = { path = "../util", features = ["poem"], version = "0" }
serde_path_to_error = "0.1.17"
percent-encoding = "2.3.1"
hex = "0.4.3"
itertools = "0.13.0"
tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-webpki-roots",
    "tokio-rustls",
] }
pubserve = { version = "1.1.0", features = ["async", "send"] }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
sqlx-pg-uint = { workspace = true }
toml = "0.8.22"
argon2 = "0.5.3"

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"
