[package]
name = "symfonia"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
pg-embed = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.21"
util = { version = "0.1.0", path = "../util" }
