[package]
name = "util"
version = "0.1.0"
edition = "2024"
publish = false
license = "MPL-2.0"

[features]
poem = ["dep:poem"]

[dependencies]
argon2 = "0.5.3"
bigdecimal = "0.4.8"
chorus = { workspace = true }
chrono = "0.4.41"
email_address = "0.2.9"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
log4rs = "1.3.0"
num-traits = "0.2.19"
parking_lot = "0.12.3"
poem = { version = "3.1.9", optional = true }
pubserve = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.15"
secrecy = "0.10.3"
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = "3.12.0"
sqlx = { workspace = true }
sqlx-pg-uint = { workspace = true }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["net", "rt-multi-thread", "sync"] }
tokio-tungstenite = { workspace = true }
toml = "0.8.22"
zeroize = { version = "1.8.1", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11.8"

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"
